--- a/package.json
+++ b/package.json
@@ -39,5 +39,7 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "prettier": "^2.2.1"
+    }
 }
