--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
+        "braintree-web-drop-in-react": "^1.2.1",
         "moment": "^2.29.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
