--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "autoprefixer": "^9",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
         "braintree-web-drop-in-react": "^1.2.1",
         "moment": "^2.29.0",
+        "postcss": "^7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
@@ -42,9 +45,6 @@
         ]
     },
     "devDependencies": {
-        "autoprefixer": "^9",
-        "postcss": "^7",
-        "prettier": "^2.2.1",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+        "prettier": "^2.2.1"
     }
 }
