--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
